# rgb

./: .gitignore  Cargo.toml  README.md  config.toml
src/: config.rs  display.rs  gb.rs  hotkeys.rs  main.rs  ppu.rs  utils.rs
src/apu/: channel1.rs  channel2.rs  channel3.rs  channel4.rs  mod.rs  utils.rs
src/bus/: cartridge.rs  joypad.rs  mod.rs
src/bus/cartridge/: mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mod.rs
src/cpu/: bus.rs  instruction.rs  mod.rs  registers.rs
