[package]
name = "rgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
pixels = "0.13.0"
spin_sleep = "1.1.1"
winit = { version = "0.29.4", features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"], default-features = false }
winit_input_helper = "0.15.1"
