[package]
name = "rgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
pixels = { git = "https://github.com/mkrasnitski/pixels", branch = "bump-wgpu-winit" }
spin_sleep_util = "0.1.1"
winit = "0.29.4"
winit_input_helper = "0.15.1"
