[package]
name = "rgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.5.4", features = ["derive"] }
enum-primitive-derive = "^0.3"
num-traits = "^0.2"
pixels = { git = "https://github.com/parasyte/pixels" }
serde = { version = "1.0.197", features = ["derive"] }
spin_sleep_util = "0.1.1"
toml = "0.8.10"
winit = "0.29.4"
